crates/serde-feather/tests/ui/field_duplicate_default.rs
use serde_feather::FeatherDeserialize;

#[derive(FeatherDeserialize)]
struct DuplicateDefaultField {
    #[serde(default, default)]
    value: u8,
}

fn main() {}
